--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 code {
-	font-family: mono;
+	font-family: monospace, '';
 	background-color: #f0f0f0;
 	padding: 2px 4px;
 	border-radius: 4px;
